// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Media should render as 16:9 1`] = `
<div class="mdc-card__media mdc-card__media--square mdc-card__media--16-9">
  <!---->
</div>
`;

exports[`Card Media should render as square 1`] = `
<div class="mdc-card__media mdc-card__media--square">
  <!---->
</div>
`;

exports[`Card Media should render with no prop 1`] = `
<div class="mdc-card__media mdc-card__media--square">
  <!---->
</div>
`;

exports[`Card should render as outlined 1`] = `
<div class="mdc-card mdc-card--outlined">
  <!---->
</div>
`;

exports[`Card should render with action buttons 1`] = `
<div class="mdc-card">
  <div class="mdc-card__actions">
    <!---->
    <div class="mdc-card__action-buttons"><button class="mdc-button mdc-card__action mdc-card__action--button"> <span class="mdc-button__label"></span> </button><button class="mdc-button mdc-card__action mdc-card__action--button"> <span class="mdc-button__label"></span> </button></div>
    <!---->
  </div>
</div>
`;

exports[`Card should render with action icons 1`] = `
<div class="mdc-card">
  <div class="mdc-card__actions">
    <!---->
    <!---->
    <div class="mdc-card__action-icons"><button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-card__action mdc-card__action--icon">
        <!---->
        <!----></button><button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-card__action mdc-card__action--icon">
        <!---->
        <!----></button></div>
  </div>
</div>
`;

exports[`Card should render with full bleed action 1`] = `
<div class="mdc-card">
  <div class="mdc-card__actions mdc-card__actions--full-bleed"><button class="mdc-button mdc-card__action mdc-card__action--button"> <span class="mdc-button__label"></span> </button>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Card should render with no prop 1`] = `
<div class="mdc-card">
  <!---->
</div>
`;

exports[`Card should render with primary action 1`] = `
<div class="mdc-card">
  <div tabindex="0" class="mdc-card__primary-action">
    <div class="mdc-card__media mdc-card__media--square">
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`CardPrimaryAction should render with no prop 1`] = `<div tabindex="0" class="mdc-card__primary-action"></div>`;

exports[`CardPrimaryAction should render without ripple 1`] = `<div tabindex="0" class="mdc-card__primary-action"></div>`;
